--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Sakura API which retrieves all the cards information",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=dev&& node server.js",
-    "start-prod": "set NODE_ENV=prod&& node server.js",
+    "development": "set NODE_ENV=dev&& node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
